Calculate balance per transaction using all transactions

Using a filter would provide wrong balance values per transaction

BUG: 458346